read only property to disable all write actions

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -832,6 +832,7 @@ group.publicationReportingSettings.reportingMailTemplate = mail template
 group.reporting                                          = report publication to {0}
 group.reporting.headline                                 = report publication to group
 group.reporting.mail.subject                             = New publication reported
+group.settings                                           = group settings
 group.updatePermission.update                            = update permissions
 
 grouprequest.mail.body    = <a href="{2}">{1}</a> has requested a new group.<br /><br />Name: {0}<br />Description: {3}<br />Reason: {4}<br /><br /><a href="{5}">Admin Group Page</a>
@@ -2114,14 +2115,15 @@ system.about.bs.learnmore                = learn more
 system.about.bs.register                 = register for free
 system.bib3.about                        = We have created a completely new user interface that\u2019s as powerful as it is intuitive to use. The new {0} front-end gives you a better accessibility, usability, and makes the system even more useful for mobile work.
 system.bib3.switch                       = Switch to {0}
+system.bib3.switch.endoflife             = Please note that the old layout you are using will be disabled on July 1st 2015. Your account will then be migrated to the new layout.
 system.bib3.switch.now                   = Switch to {0} now!
-system.bib3.switch.endoflife		 = Please note that the old layout you are using will be disabled on July 1st 2015. Your account will then be migrated to the new layout.
 system.contact                           = Contact:
 system.desc                              = The blue social bookmark and publication sharing system.
 system.groups                            = You can <a href="{0}">request a new group</a>.\r\nA group allows you to get an aggregated view of its members' posts as well as to make some of your own posts visible only to members. More information on groups can be found in our blog posts <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a> and <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
 system.introduction                      = This page shows you the latest updates of {0}.
 system.loginRegister                     = sign in/register
 system.offeredBy                         = {0} is offered by the <a href="http://www.kde.cs.uni-kassel.de/contact.html">KDE group</a> of the University of Kassel, the <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR group</a> of the University of W\u00FCrzburg, and the <a href="http://www.l3s.de/">L3S Research Center</a>, Germany.
+system.readOnly.notice                   = {0} is currently in read-only mode. We\u2019ll return with full functionality soon.
 system.recent                            = Here you see the latest posts:
 system.recentlyDiscussed.intro.help      = See our help sections on <a href='/help_en/Discussion%20Reviews%20and%20Comments'>discussions</a> to learn more about reviews and comments.
 system.recentlyDiscussed.intro.noUser    = Bookmarks and publications that were recently reviewed or commented.
