--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -831,6 +831,7 @@ group.publicationReportingSettings.reportingMailTemplate = E-Mail Vorlage
 group.reporting                                          = Publikation {0} melden
 group.reporting.headline                                 = Publikation Gruppe melden
 group.reporting.mail.subject                             = Neue Publikation gemeldet
+group.settings                                           = Gruppeneinstellungen
 group.updatePermission.update                            = Berechtigungen setzen
 
 grouprequest.mail.body    = <a href="{2}">{1}</a> hat eine neue Gruppe beantragt.<br /><br />Name: {0}<br />Beschreibung: {3}<br />Grund: {4}<br /><br /><a href="{5}">Admin-Gruppenseite</a>
@@ -2111,14 +2112,15 @@ system.about.bs.learnmore                = erfahren Sie mehr
 system.about.bs.register                 = kostenlos registrieren
 system.bib3.about                        = Wir haben eine komplett neue Benutzerschnittstelle geschaffen, die genauso m\u00E4chtig wie intuitiv zu bedienen ist. Das neue Frontend macht {0} zug\u00E4nglicher, erh\u00F6ht die Bedienbarkeit und macht es fit f\u00FCr den mobilen Einsatz.
 system.bib3.switch                       = Wechseln Sie zu {0}
+system.bib3.switch.endoflife             = Bitte beachten Sie, dass die alte Benutzerschnittstelle, die Sie derzeit nutzen, am 1. Juli 2015 deaktiviert wird. Ihr Benutzerkonto wird dann automatisch auf die neue Schnittstelle umgestellt.
 system.bib3.switch.now                   = Wechseln Sie jetzt zu {0}!
-system.bib3.switch.endoflife		 = Bitte beachten Sie, dass die alte Benutzerschnittstelle, die Sie derzeit nutzen, am 1. Juli 2015 deaktiviert wird. Ihr Benutzerkonto wird dann automatisch auf die neue Schnittstelle umgestellt.
 system.contact                           = Kontakt:
 system.desc                              = Lesezeichen und Publikationen teilen - in blau!
 system.groups                            = Sie k\u00F6nnen <a href="{0}">neue Gruppen erstellen</a>.\r\nEine Gruppe erm\u00F6glicht eine zusammengefasste Sicht auf die Eintr\u00E4ge aller Gruppenmitglieder sowie die Einschr\u00E4nkung der Sichtbarkeit von Eintr\u00E4gen auf Mitglieder der Gruppe. Mehr Informationen zu Gruppen finden Sie (auf Englisch) in unserem Blog unter <a href="http://blog.bibsonomy.org/2007/08/feature-of-week-manage-publication.html">Manage the publication lists of your homepage</a>  und <a href="http://blog.bibsonomy.org/2007/04/feature-of-week-groups-and-friends.html">Groups and Friends</a>.
 system.introduction                      = Hier sind die letzten Beitr\u00E4ge zu {0} aufgelistet. 
 system.loginRegister                     = Anmelden/Registrieren
 system.offeredBy                         = {0} wird vom <a href="http://www.kde.cs.uni-kassel.de/kontakt.html">FG Wissensverarbeitung</a> der Universit\u00E4t Kassel, der <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR Gruppe</a> der Universit\u00E4t W\u00FCrzburg und vom <a href="http://www.l3s.de/">Forschungszentrum L3S</a> betrieben.
+system.readOnly.notice                   = {0} ist momentam im schreibgesch\u00FCtzten Modus. Wir werden bald wieder die vollst\u00E4ndige Funktionalit\u00E4t wiederherstellen. 
 system.recent                            = Hier sind die letzten Beitr\u00E4ge aufgelistet:
 system.recentlyDiscussed.intro.help      = Besuchen Sie unsere Hilfeseiten zu <a href='/help_de/Kommentar%2C%20Rezension%2C%20Bewertung%20-%20Gemeinsam%20mit%20anderen%20diskutieren'>Diskussionen</a> um mehr \u00FCber Rezensionen und Kommentare zu erfahren.
 system.recentlyDiscussed.intro.noUser    = Lesezeichen und Publikationen, die k\u00FCrzlich rezensiert oder kommentiert wurden.
