+school-field and default tag for new phdtheses added to persons

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1295,6 +1295,7 @@ person.new.newPersonButton                        = New person
 person.new.personPanelHeader                      = About this person
 person.new.postPanelHeader                        = Selected post
 person.new.subHeader                              = for post
+person.newthesis.default.tag                      = genealogie
 person.show.B1st                                  = First reviewer
 person.show.B1st.of                               = , first reviewer of
 person.show.B1stTooltip                           = First reviewer of the dissertation
@@ -1762,7 +1763,7 @@ post_bibtex.doi_isbn.isbn                            = ISBN
 post_bibtex.doi_isbn.issn                            = ISSN
 post_bibtex.doi_isbn.title                           = ISBN/DOI
 post_bibtex.heading                                  = post publication
-post_bibtex.manual.description                       = Please enter title, year and author/editor into this form to check, if you've already bookmarked this publication. On the next page you can enter the remaining publication metadata fields.
+post_bibtex.manual.description                       = Please enter title, year and author/editor into this form to check whether you have already bookmarked this publication. On the next page you can enter the remaining publication metadata fields.
 post_bibtex.manual.heading                           = Enter your publication data here:
 post_bibtex.manual.title                             = manual
 post_bibtex.pub_snippet.description                  = Just copy and paste any valid BibTeX snippet or publication reference into this box and enter a description. If your snippet contains only one reference you can edit it on the next page.
