--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1296,6 +1296,7 @@ person.new.newPersonButton                        = Neue Person
 person.new.personPanelHeader                      = \u00DCber diese Person
 person.new.postPanelHeader                        = Ausgew\u00E4hlter Post
 person.new.subHeader                              = f\u00FCr Publikation
+person.newthesis.default.tag                      = genealogie
 person.show.B1st                                  = Erstgutachter_in
 person.show.B1st.of                               = , Erstgutachter_in von
 person.show.B1stTooltip                           = Erste_r Gutachter_in der Dissertation; h\u00E4ufig identisch mit dem Doktorvater / der Doktormutter
