+special handling for dnb tag and genealogie user

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -635,6 +635,7 @@ error.registration.samlId.missmatch          = Authentication could not be verif
 error.relationship_from_spammer              = Sorry, you cannot create a relationship with this user in our system.
 error.relationship_with_dblp                 = Sorry, you cannot create a relationship with the user 'dblp' in our system, because it is a special user.
 error.relationship_with_nonexisting_user     = Sorry, you cannot create a relationship with a non-existing user.
+error.relationship_with_special_user         = Sorry, you cannot create a relationship with a system usser.
 error.rename.failed                          = The file rename could not be finished. {0}
 error.report                                 = report error
 error.scrape.failed                          = Could not scrape the URL {0}. Message was: {1}
