disabled more buttons when system is in read only mode

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -2244,7 +2244,7 @@ system.groups                            = Sie k\u00F6nnen <a href="{0}">neue Gr
 system.introduction                      = Hier sind die letzten Beitr\u00E4ge zu {0} aufgelistet. 
 system.loginRegister                     = Anmelden/Registrieren
 system.offeredBy                         = {0} wird vom <a href="http://www.kde.cs.uni-kassel.de/kontakt.html">FG Wissensverarbeitung</a> der Universit\u00E4t Kassel, der <a href="http://www.is.informatik.uni-wuerzburg.de/dmir/">DMIR Gruppe</a> der Universit\u00E4t W\u00FCrzburg und vom <a href="http://www.l3s.de/">Forschungszentrum L3S</a> betrieben.
-system.readOnly.notice                   = {0} ist momentam im schreibgesch\u00FCtzten Modus. Wir werden bald wieder die vollst\u00E4ndige Funktionalit\u00E4t wiederherstellen. 
+system.readOnly.notice                   = {0} ist momentam im schreibgesch\u00FCtzten Modus. Wir werden bald die vollst\u00E4ndige Funktionalit\u00E4t wiederherstellen. 
 system.recent                            = Hier sind die letzten Beitr\u00E4ge aufgelistet:
 system.recentlyDiscussed.intro.help      = Besuchen Sie unsere Hilfeseiten zu <a href='/help_de/Kommentar%2C%20Rezension%2C%20Bewertung%20-%20Gemeinsam%20mit%20anderen%20diskutieren'>Diskussionen</a> um mehr \u00FCber Rezensionen und Kommentare zu erfahren.
 system.recentlyDiscussed.intro.noUser    = Lesezeichen und Publikationen, die k\u00FCrzlich rezensiert oder kommentiert wurden.
