--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -843,7 +843,7 @@ goldStandard.users                      = users having this post in their collec
 
 goldstandard.resource.info.noAbstract = No abstract has been added to this post.
 goldstandard.resource.info.noLinks    = No links have been added to this post.
-goldstandard.resource.relatedUsers    = Users of this resource
+goldstandard.resource.relatedUsers    = Users that have this publication in their collection
 
 goto.first    = go to the first page
 goto.last     = go to the last page
@@ -1808,7 +1808,7 @@ publications.abstract.headline   = Abstract
 publications.citations.headline  = Cite this publication
 publications.discussion.headline = Comments and Reviews
 #publications
-publications.resource.headline   = Links and resources
+publications.resource.headline   = Links and Resources
 
 qrcode.actions.download                       = without a QR Code
 qrcode.actions.qrDownload                     = Download PDF with embedded QR code
