--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -29,6 +29,7 @@ admin.actions.scraper              = Scraper info
 admin.actions.user                 = User info
 admin.group.pending                = pending groups
 admin.oauth.consumer.callbackUrl   = Callback URL
+admin.oauth.consumer.delete        = delete
 admin.oauth.consumer.description   = description
 admin.oauth.consumer.details       = Consumer Details
 admin.oauth.consumer.ensure_delete = Are you sure you want to remove this consumer?
@@ -2236,7 +2237,7 @@ synchronization.direction.server_to_client.on_server = to synchronization client
 synchronization.explanation                          = We will synchronize {0} {1}. If you feel that the synchronization plan suggests that too many posts should be updated, then change the synchronization direction on <a href="/settings?selTab=4">the settings page</a> and/or reset the synchronization status.
 synchronization.firstWins                            = first wins
 synchronization.header                               = Synchronization
-synchronization.help.autoSync                        = *Before you can use the automatic synchronization, you have initiate a sync <u> in both directions </u> first.* Please make sure that this has been carried out manually before you save this setting. The Auto Sync is performed every evening.
+synchronization.help.autoSync                        = <b>Before you can use the automatic synchronization, you have initiate a sync <u>in both directions</u> first.</b> Please make sure that this has been carried out manually before you save this setting. The Auto Sync is performed every evening.
 synchronization.help.client                          = Name of synchronization client
 synchronization.help.conflictResolution              = Select the conflict resolution strategy. Confilicts happens if a post was changed on server and client between two synchronizations.
 synchronization.help.directions                      = Select synchronization directions.\nBoth: both systems have the same posts.\nTo server: the client changes will be submitted to the server, but server changes not to the client.\nTo client: the server changes will be submitted to the client, but client changes not to the server.
@@ -2444,4 +2445,3 @@ wordpress.plugin = WordPress Plugin
 yes = yes
 
 younger = younger
-admin.oauth.consumer.delete=delete
