--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -29,6 +29,7 @@ admin.actions.scraper              = Scraper Infos
 admin.actions.user                 = Benutzer Infos
 admin.group.pending                = Gruppenantr\u00E4ge
 admin.oauth.consumer.callbackUrl   = Callback URL
+admin.oauth.consumer.delete        = l\u00C3\u00B6schen
 admin.oauth.consumer.description   = Beschreibung
 admin.oauth.consumer.details       = Consumer Details
 admin.oauth.consumer.ensure_delete = Sind Sie sicher, dass sie diesen Consumer l\u00F6schen m\u00F6chten?\n
@@ -2184,7 +2185,7 @@ synchronization.direction.server_to_client.on_server = zum Synchronisationsclien
 synchronization.explanation                          = Es werden {0} {1} \u00FCbertragen. Sollten Sie den Verdacht haben, dass laut Synchronisationsplan zu viele Eintr\u00E4ge gel\u00F6scht werden sollen, so \u00E4ndern Sie bitte die Synchronisationsrichtung in den <a href="/settings?selTab=4">Einstellungen</a> und/oder setzen Sie den Synchronisationsstatus zur\u00FCck.
 synchronization.firstWins                            = Erster gewinnt
 synchronization.header                               = Synchronisation
-synchronization.help.autoSync                        = *Bevor Sie die automatische Synchronisierung nutzen k\u00F6nnen, muss zuvor ein Sync <u> in beide Richtungen </u> erfolgen.* Bitte stellen Sie sicher, dass dieser zuvor manuell ausgef\u00FChrt wurde bevor Sie diese Einstellung speichern. Der Auto-Sync wird jeden Abend durchgef\u00FChrt.
+synchronization.help.autoSync                        = <b>Bevor Sie die automatische Synchronisierung nutzen k\u00F6nnen, muss zuvor ein Sync <u>in beide Richtungen</u> erfolgen.</b> Bitte stellen Sie sicher, dass dieser zuvor manuell ausgef\u00FChrt wurde bevor Sie diese Einstellung speichern. Der Auto-Sync wird jeden Abend durchgef\u00FChrt.
 synchronization.help.client                          = Name des Synchronizationsclients
 synchronization.help.conflictResolution              = W\u00E4hlen Sie die Konfliktaufl\u00F6sungsstrategie aus. Konflikte passieren, wenn ein Eintrag auf Server und Client zwischen zwei Synchronizationen ge\u00E4ndert wurde.
 synchronization.help.directions                      = W\u00E4hlen Sie die Synchronizationsrichtung aus.\nBeide: beide Systeme haben gleiche Eintr\u00E4ge.\nZum Server: Die \u00C4nderungen vom Client werden an Server \u00FCbermittelt, aber nicht vom Server zum Client.\nZum Client: Die \u00C4nderungen vom Server werden an Client \u00FCbermittelt, aber nicht vom Client zum Server.
@@ -2392,4 +2393,3 @@ wordpress.plugin = WordPress Plugin
 yes = ja
 
 younger = j\u00FCngere
-admin.oauth.consumer.delete=löschen
