removed old form tag lib

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -29,6 +29,7 @@ admin.actions.scraper              = Scraper info
 admin.actions.user                 = User info
 admin.group.pending                = pending groups
 admin.oauth.consumer.callbackUrl   = Callback URL
+admin.oauth.consumer.delete        = delete
 admin.oauth.consumer.description   = description
 admin.oauth.consumer.details       = Consumer Details
 admin.oauth.consumer.ensure_delete = Are you sure you want to remove this consumer?
@@ -982,7 +983,7 @@ less = less
 limited_account.activation.activate             = activate
 limited_account.activation.activitionConditions = I am aware, that after this activation I can choose to post publications as public and that those posts are visible to others. Private posts are still possible and will remain invisible to others.
 limited_account.activation.error.checkbox       = Please check the checkbox to accept the alongside conditions.
-limited_account.activation.text.left            = <h3 class="textPage">Welcome to {0}!</h3>\n<div class="niceText">\n\u0009<p>\n\u0009\u0009{0}, your personal management-system for publications, allows central storage and easy everywhere-access to online publication lists. These can be exported in lots of different formats for your publications, CV, and homepage.\n\u0009</p>\n\u0009<p>\n\u0009\u0009By adding favorites at your library's discovery service you already use {0} publication lists indirectly.\n\u0009</p>\n\u0009<p>\n\u0009\u0009{0} also gives you the opportunity to share lists of publications and bookmarks with your colleagues and friends. For this, we need your permission which you can give by submitting the form below.<br />\n\u0009\u0009After submission you can start using {0}'s advanced features immediately. \n\u0009</p>\n\u0009<p style="margin-bottom: 2em;">\n\u0009\u0009Have a lot of fun!\n\u0009</p>\n</div>
+limited_account.activation.text.left            = <h3 class="textPage">Welcome to {0}!</h3><div class="niceText"><p>{0}, your personal management-system for publications, allows central storage and easy everywhere-access to online publication lists. These can be exported in lots of different formats for your publications, CV, and homepage.\n</p><p>By adding favorites at your library's discovery service you already use {0} publication lists indirectly.</p><p>{0} also gives you the opportunity to share lists of publications and bookmarks with your colleagues and friends. For this, we need your permission which you can give by submitting the form below.<br />After submission you can start using {0}'s advanced features immediately.</p>\n<p style="margin-bottom: 2em;">Have a lot of fun!</p>\n</div>
 limited_account.activation.text.right           = <h4 class="textPage">Your PUMA benefits:</h4>\n<div class="niceText">\n\u0009<ul class="text">\n\u0009\u0009<li>Online management of literature without installing additional software</li>\n\u0009\u0009<li>fast addition of bibliography via mouse-click or ISBN</li>\n\u0009\u0009<li>easy integration of your publication list into your homepage</li>\n\u0009\u0009<li>forward your publication to the institutional repository, don't type your data twice</li>\n\u0009\u0009<li>forward your publication to your university's Research Information System (RIS)</li>\n\u0009\u0009<li>comprehensive, intuitive support while collecting publications</li>\n\u0009\u0009<li>lists of your own publications with a simple data transfer</li>\n\u0009\u0009<li>simple collection, administration and recall of web-bookmarks</li>\n\u0009</ul>\n</div>
 limited_account.activation.user_not_limited     = Your account is already active.
 
@@ -1430,7 +1431,7 @@ post.actions.edit.tags.myTags                           = myTags
 post.actions.edit.tags.recommended                      = recommended
 post.actions.edit.tags.title                            = edit the tags of this post
 post.actions.edit.title                                 = edit this post
-post.actions.reportSpammer								= report user as spammer
+post.actions.reportSpammer                              = report user as spammer
 post.bibtex.addedFiles                                  = added files
 post.bibtex.btnRename                                   = Rename
 post.bibtex.changeFiletype                              = Do you really want to edit the file's format?
@@ -2447,4 +2448,3 @@ wordpress.plugin = WordPress Plugin
 yes = yes
 
 younger = younger
-admin.oauth.consumer.delete=delete
