added missing message

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1868,6 +1868,7 @@ settings.group.denyReason                                   = reason
 settings.group.denyReason.help                              = the reason why the user is not allowed to join
 settings.group.description                                  = description
 settings.group.description.help                             = This description will be displayed in the sidebar of the grousettings.german                                             = German
+settings.group.disband                                      = disband group
 # disband group
 settings.group.disband.InfoText                             = TODO: some kind of information what happens when a group will be deleted
 settings.group.disband.notEmptyInfoText                     = This group can only be disbanded, if you remove all other group members.
