added forgotten keys for dialog (error while deleting document)

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -66,18 +66,6 @@ and = and
 
 available = available
 
-clipboard.delete           = delete all your posts from the clipboard
-clipboard.edit.tags        = edit the tags of all own posts on your clipboard
-clipboard.editTags         = edit tags
-clipboard.export           = export the posts in one of several formats
-clipboard.exportPosts      = export posts
-# clipboard page
-clipboard.info             = Here you can manage publication posts which you have added to your clipboard. For details see <a href="/help/clipboard">the help page</a>.
-clipboard.info.examples    = For example, you can easily:
-clipboard.infoActions      = For example, you can
-clipboard.removeAll        = clear clipboard
-clipboard.removeAllVerbose = remove all publications from the clipboard
-
 batchedit.AllpostTagsHeader        = The following tag(s) will be added <br/> to all the selected posts
 batchedit.EditAllTag               = Add tags to all the selected posts
 batchedit.EditEachTag              = Edit each posts' tags separately
@@ -300,6 +288,18 @@ by = by
 captcha = captcha
 
 change = change
+
+clipboard.delete           = delete all your posts from the clipboard
+clipboard.edit.tags        = edit the tags of all own posts on your clipboard
+clipboard.editTags         = edit tags
+clipboard.export           = export the posts in one of several formats
+clipboard.exportPosts      = export posts
+# clipboard page
+clipboard.info             = Here you can manage publication posts which you have added to your clipboard. For details see <a href="/help/clipboard">the help page</a>.
+clipboard.info.examples    = For example, you can easily:
+clipboard.infoActions      = For example, you can
+clipboard.removeAll        = clear clipboard
+clipboard.removeAllVerbose = remove all publications from the clipboard
 
 close = close
 
@@ -1098,9 +1098,6 @@ navi.author                      = author
 navi.author.hint                 = author(s)
 navi.authors                     = authors
 navi.automatic.groupRequest      = create group
-navi.clipboard                      = clipboard
-navi.clipboard.empty                = your clipboard is empty
-navi.clipboard.inactive             = Sign in to see your picked items.
 navi.bibtex                      = export BibTeX
 navi.bibtexhashexample           = calculate hashes
 navi.bibtexkey                   = BibTeX key
@@ -1113,6 +1110,9 @@ navi.classifier_nospammer        = Classifier: No Spammer
 navi.classifier_nospammer_unsure = Classifier: No Spammer (U)
 navi.classifier_spammer          = Classifier: Spammer
 navi.classifier_spammer_unsure   = Classifier: Spammer (U)
+navi.clipboard                   = clipboard
+navi.clipboard.empty             = your clipboard is empty
+navi.clipboard.inactive          = Sign in to see your picked items.
 navi.concept                     = concept
 navi.concept.hint                = concept tag(s)
 navi.concepts                    = concepts
@@ -1593,6 +1593,8 @@ post.resource.discussionItem.anonymous.help             = Using the anonymous op
 post.resource.discussionItem.you                        = you
 post.resource.discusssion.warning.goldstandard          = Warning: If you write a comment or review to a post with restricted visibility, a publicly viewable copy of this post will be created. The new post will have no connection to this post's owner.
 post.resource.discusssion.warning.goldstandard.continue = Warning: You are writing a comment or review to a post with restricted visibility. If you continue, a publicly viewable copy of this post will be created. The new post will have no connection to this post's owner. Continue?
+post.resource.document.remove.error                     = Deleting the document failed.
+post.resource.document.remove.error.title               = Error while deleting
 post.resource.editBookmark                              = edit your bookmark post
 post.resource.editGoldStandardBookmark                  = edit this community post
 post.resource.editGoldStandardPublication               = edit this community post
@@ -1816,7 +1818,7 @@ qrcode.actions.qrDownload                     = Download PDF with embedded QR co
 qrcode.error.errorHeader                      = Error
 qrcode.error.errorMessage                     = No camera found. To use the code scanner you have to connect a webcam to your computer.
 qrcode.error.flashMissing                     = The code reader requires the Adobe flash player.
-qrcode.info.clipboard.readerInfoMessage          = With the help of the code reader you have the possibility to add publications to your clipboard by scanning QR Codes of publications using your webcam. Hold the code right in front your camera such that it appears within the picture.
+qrcode.info.clipboard.readerInfoMessage       = With the help of the code reader you have the possibility to add publications to your clipboard by scanning QR Codes of publications using your webcam. Hold the code right in front your camera such that it appears within the picture.
 qrcode.info.embedderInfoMessage               = By default your document is downloaded with an embedded QR Code containing the URL to the corresponding {0} post. You can later add that publication to your clipboard simply by scanning the QR-Code using a webcam on your clipboard page. Thus you can quickly compile a reference list from the publications you have printed. If you follow this link you will be provided with the original document without an embedded QR Code.
 qrcode.info.postPublication.readerInfoMessage = With the help of the code reader you have the possibility to automatically post publications by scanning QR Codes or ISBN codes of publications or books using your webcam. Hold the code right in front your camera such that it appears within the picture.
 
