--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -66,18 +66,6 @@ and = und
 
 available = verf\u00FCgbar
 
-clipboard.delete           = alle eigenen Eintr\u00E4ge aus der Ablage entfernen
-clipboard.edit.tags        = die Tags aller eigenen Eintr\u00E4ge in der Ablage bearbeiten
-clipboard.editTags         = Tags bearbeiten
-clipboard.export           = die Eintr\u00E4ge der Ablage in vielen Formaten exportieren
-clipboard.exportPosts      = Eintr\u00E4ge exportieren
-# clipboard Seite
-clipboard.info             = Hier k\u00F6nnen Sie die Publikationen verwalten, die Sie zur Ablage hinzugef\u00FCgt haben. Weitere Informationen dazu finden Sie <a href="/help_de/Ablage">in der Hilfe</a>.
-clipboard.info.examples    = Beispielsweise k\u00F6nnen Sie schnell und einfach:
-clipboard.infoActions      = Beispielsweise k\u00F6nnen Sie schnell und einfach
-clipboard.removeAll        = Ablage leeren
-clipboard.removeAllVerbose = Alle Publikationen aus der Ablage entfernen
-
 batchedit.AllpostTagsHeader        = Diese Tags werden zu allen selektierten<br/> Post hinzugef\u00FCgt
 batchedit.EditAllTag               = Tags zu allen ausgew\u00E4hlten Posts hinzuf\u00FCgen
 batchedit.EditEachTag              = Die Tags aller ausgew\u00E4hlten Eintr\u00E4ge separat bearbeiten
@@ -299,6 +287,18 @@ by = von
 captcha = Captcha
 
 change = &auml;ndern
+
+clipboard.delete           = alle eigenen Eintr\u00E4ge aus der Ablage entfernen
+clipboard.edit.tags        = die Tags aller eigenen Eintr\u00E4ge in der Ablage bearbeiten
+clipboard.editTags         = Tags bearbeiten
+clipboard.export           = die Eintr\u00E4ge der Ablage in vielen Formaten exportieren
+clipboard.exportPosts      = Eintr\u00E4ge exportieren
+# clipboard Seite
+clipboard.info             = Hier k\u00F6nnen Sie die Publikationen verwalten, die Sie zur Ablage hinzugef\u00FCgt haben. Weitere Informationen dazu finden Sie <a href="/help_de/Ablage">in der Hilfe</a>.
+clipboard.info.examples    = Beispielsweise k\u00F6nnen Sie schnell und einfach:
+clipboard.infoActions      = Beispielsweise k\u00F6nnen Sie schnell und einfach
+clipboard.removeAll        = Ablage leeren
+clipboard.removeAllVerbose = Alle Publikationen aus der Ablage entfernen
 
 close = schlie\u00DFen
 
@@ -1055,9 +1055,6 @@ navi.author                      = Autor
 navi.author.hint                 = Autoren
 navi.authors                     = Autoren
 navi.automatic.groupRequest      = Gruppe erstellen
-navi.clipboard                      = Ablage
-navi.clipboard.empty                = Ihre Ablage ist leer
-navi.clipboard.inactive             = Melden Sie sich an, um den Inhalt Ihrer Ablage zu sehen.
 navi.bibtex                      = BibTeX exportieren
 navi.bibtexhashexample           = Hashes berechnen
 navi.bibtexkey                   = BibTeX-Schl\u00FCssel
@@ -1070,6 +1067,9 @@ navi.classifier_nospammer        = Model: Keine Spammer
 navi.classifier_nospammer_unsure = Model: Keine Spammer (U)
 navi.classifier_spammer          = Model: Spammer
 navi.classifier_spammer_unsure   = Model: Spammer (U)
+navi.clipboard                   = Ablage
+navi.clipboard.empty             = Ihre Ablage ist leer
+navi.clipboard.inactive          = Melden Sie sich an, um den Inhalt Ihrer Ablage zu sehen.
 navi.concept                     = Konzept
 navi.concept.hint                = Konzept-Tags
 navi.concepts                    = Konzepte
@@ -1543,6 +1543,8 @@ post.resource.discussionItem.anonymous.help             = Anonyme Kommentare und
 post.resource.discussionItem.you                        = Sie
 post.resource.discusssion.warning.goldstandard          = Warnung: Wenn Sie einen Kommentar oder eine Rezension an einen Post mit beschr\u00E4nkter Sichtbarkeit schreiben, dann wird eine \u00F6ffentlich sichtbare Kopie dieses Posts erzeugt. Diese Kopie hat keine Verbindung zum Besitzer dieses Posts.
 post.resource.discusssion.warning.goldstandard.continue = Warnung: Sie schreiben einen Kommentar oder eine Rezension an einen Post mit beschr\u00E4nkter Sichtbarkeit. Wenn Sie fortfahren, wird eine \u00F6ffentlich sichtibare Kopie dieses Posts erzeugt. Die Kopie hat keine Verbindung zum Besitzer dieses Posts. Fortfahren?
+post.resource.document.remove.error                     = Das L\u00F6schen des Dokumentes ist fehlgeschlagen.
+post.resource.document.remove.error.title               = Fehler beim L\u00F6schen
 post.resource.editBookmark                              = Bearbeiten Sie Ihr Lesezeichen
 post.resource.editGoldStandardBookmark                  = Bearbeiten Sie diesen Gemeinschaftseintrag
 post.resource.editGoldStandardPublication               = Bearbeiten Sie diesen Gemeinschaftseintrag
@@ -1763,7 +1765,7 @@ qrcode.actions.qrDownload                     = Download PDF mit eingebettetem Q
 qrcode.error.errorHeader                      = Fehler
 qrcode.error.errorMessage                     = Es ist keine Kamera angeschlossen. Um den Code-Leser benutzen zu k\u00F6nnen, m\u00FCssen Sie eine Kamera an Ihren PC anschlie\u00DFen.
 qrcode.error.flashMissing                     = Der Code-Leser ben\u00F6tigt den Adobe Flash Player auf Ihrem System.
-qrcode.info.clipboard.readerInfoMessage          = Mittels des Code-Lesers haben Sie die M\u00F6glichkeit mit einer Webcam QR-Codes von Publikationen einzulesen, um diese zur Ablage hinzuzuf\u00FCgen. Halten Sie dazu den QR-Code m\u00F6glichst gerade vor die Kamera, so dass dieser innerhalb des Bildes erscheint.
+qrcode.info.clipboard.readerInfoMessage       = Mittels des Code-Lesers haben Sie die M\u00F6glichkeit mit einer Webcam QR-Codes von Publikationen einzulesen, um diese zur Ablage hinzuzuf\u00FCgen. Halten Sie dazu den QR-Code m\u00F6glichst gerade vor die Kamera, so dass dieser innerhalb des Bildes erscheint.
 qrcode.info.embedderInfoMessage               = Standardm\u00E4\u00DFig wird Ihr Dokument mit einem QR-Code versehen, der die URL zum zugeh\u00F6rigen {0}-Eintrag enth\u00E4lt. Sie k\u00F6nnen Publikationen leicht zu Ihrer Ablage hinzuf\u00FCgen, wenn Sie in Ihrer Ablage diesen QR-Code mit Hilfe einer Webcam vom gedruckten Dokument einlesen. Auf diese Weise k\u00F6nnen Sie z. B. leicht die Referenzen zu einer Forschungsarbeit in Ihrer Ablage zusammenstellen. Wenn sie diesen Link benutzen, erhalten sie die Originalfassung des Dokuments ohne eingebetteten QR-Code.
 qrcode.info.postPublication.readerInfoMessage = Mittels des Code-Lesers haben Sie die M\u00F6glichkeit mit einer Webcam QR-Codes oder ISBN Nummern von Publikationen oder B\u00FCchern einzulesen, sodass diese automatisch eingetragen werden. Halten Sie dazu den Code m\u00F6glichst gerade vor die Kamera, so dass dieser innerhalb des Bildes erscheint.
 
