the expected calues improved

--- a/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AAAIScraperUnitURLTest2.bib
+++ b/bibsonomy-scraper/src/test/resources/org/bibsonomy/scraper/data/AAAIScraperUnitURLTest2.bib
@@ -5,6 +5,7 @@
 	journal={AI Magazine},
 	keywords={Robotics},
 	number=4,
+	pages={17--30},
 	title={Designing Embodied Cues for Dialog with Robots},
 	url={http://www.aaai.org/ojs/index.php/aimagazine/article/view/2376},
 	volume=32,
