firstSync and autoSync check, eMail notification

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1050,6 +1050,9 @@ mail.registration.body               = \nThank you for using {1}.\n\nYour userna
 # subject and body of email sent to users after successful registration
 #
 mail.registration.subject            = Your {1} Registration
+mail.sync                            = 
+mail.sync.body                       = The automatic synchronization of {1}, with the configured Client {4}, could not be executed. Please check your settings and make sure that a sync in both directions has been carried out before.\r\n\r\n{2}settings\r\n\r\nHelp and FAQ:\r\n{2}help\r\n{2}help/faq\r\n\r\nNews regarding {1} can be found in our blog:\r\n{3}
+mail.sync.subject                    = Your automatic synchronization on {1}
 
 members = members
 
@@ -2237,7 +2240,7 @@ synchronization.direction.server_to_client.on_server = to synchronization client
 synchronization.explanation                          = We will synchronize {0} {1}. If you feel that the synchronization plan suggests that too many posts should be updated, then change the synchronization direction on <a href="/settings?selTab=4">the settings page</a> and/or reset the synchronization status.
 synchronization.firstWins                            = first wins
 synchronization.header                               = Synchronization
-synchronization.help.autoSync                        = <b>Before you can use the automatic synchronization, you have initiate a sync <u>in both directions</u> first.</b> Please make sure that this has been carried out manually before you save this setting. The Auto Sync is performed every evening.
+synchronization.help.autoSync                        = <b>Before you can use the automatic synchronization, you have initiate a sync <u>in both directions</u> first.</b> If you click Save, you will be forwarded to the Sync-Page to do a synchronization in both directions manually. The Auto Sync is performed every evening.
 synchronization.help.client                          = Name of synchronization client
 synchronization.help.conflictResolution              = Select the conflict resolution strategy. Confilicts happens if a post was changed on server and client between two synchronizations.
 synchronization.help.directions                      = Select synchronization directions.\nBoth: both systems have the same posts.\nTo server: the client changes will be submitted to the server, but server changes not to the client.\nTo client: the server changes will be submitted to the client, but client changes not to the server.
@@ -2266,7 +2269,7 @@ synchronization.server                               = synchronization server
 synchronization.server.add                           = add new synchronization server
 synchronization.server.add.acknowledge               = You requested to create a new synchronization connection to {0}.\nPlease acknowledge the new synchronization server.
 synchronization.server.add.intro                     = Here you can configure a new synchronization connection. Therefore, you need an account on the corresponding synchronization server. Fill in those account details (user name and API key) into the following form fields.
-synchronization.server.delete                        = delete server
+synchronization.server.delete                        = Delete server
 synchronization.server.delete.confirm                = Do you really want to delete the connection to this synchronization server?
 synchronization.server.reset                         = reset status
 synchronization.server.reset.confirm                 = Do you really want to reset the synchronization status?
@@ -2282,6 +2285,7 @@ synchronization.syncPlan.message                     = On {0}, {1} posts will be
 synchronization.syncPlan.message.other               = {0} posts stay untouched
 synchronization.syncThis                             = sync this
 synchronization.synchronize                          = synchronize now
+synchronization.syncpage                             = Sync-Page
 
 system.about                             = {0} is a system for sharing bookmarks and lists of literature. \n\nWhy don't you try it yourself? <a href="/help_en/Bookmark%20and%20publication%20management">Collect, organise</a>, and <a href="/help_en/Discussion%20Reviews%20and%20Comments">discuss</a> bookmarks and publications.
 system.about.bs                          = <h2>The easy way to manage scientific publications and bookmarks</h2>\n\n<p class="lead">{0} helps you to manage your publications and bookmarks, to collaborate with your colleagues and to find new interesting material for your research.</p>
