--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1007,6 +1007,9 @@ mail.registration.body               = \nVielen Dank, dass Sie sich f\u00FCr {1}
 # subject and body of email sent to users after successful registration
 #
 mail.registration.subject            = Ihre {1} Registrierung
+mail.sync                            = 
+mail.sync.body                       = Die automatische Synchronisation von {1}, mit dem von Ihnen eingestellten Client {4}, konnte nicht ausgef\u00FChrt werden.\r\nBitte \u00FCberpr\u00FCfen Sie Ihre Einstellungen und stellen Sie sicher, dass zuvor eine Synchronisation in beide Richtungen durchgef\u00FChrt wurde.\r\n\r\n{2}settings\r\n\r\nHilfeseiten und FAQ:\r\n{2}help\r\n{2}help/faq\r\n\r\nNeuigkeiten zu {1} erfahren Sie in unserem Blog:\r\n{3}
+mail.sync.subject                    = Ihre automatische Synchronisation auf {1}
 
 members = Mitglieder
 
@@ -2184,7 +2187,7 @@ synchronization.direction.server_to_client.on_server = zum Synchronisationsclien
 synchronization.explanation                          = Es werden {0} {1} \u00FCbertragen. Sollten Sie den Verdacht haben, dass laut Synchronisationsplan zu viele Eintr\u00E4ge gel\u00F6scht werden sollen, so \u00E4ndern Sie bitte die Synchronisationsrichtung in den <a href="/settings?selTab=4">Einstellungen</a> und/oder setzen Sie den Synchronisationsstatus zur\u00FCck.
 synchronization.firstWins                            = Erster gewinnt
 synchronization.header                               = Synchronisation
-synchronization.help.autoSync                        = <b>Bevor Sie die automatische Synchronisierung nutzen k\u00F6nnen, muss zuvor ein Sync <u>in beide Richtungen</u> erfolgen.</b> Bitte stellen Sie sicher, dass dieser zuvor manuell ausgef\u00FChrt wurde bevor Sie diese Einstellung speichern. Der Auto-Sync wird jeden Abend durchgef\u00FChrt.
+synchronization.help.autoSync                        = <b>Bevor Sie die automatische Synchronisierung nutzen k\u00F6nnen, muss zuvor ein Sync <u>in beide Richtungen</u> erfolgen.</b> Wenn Sie auf Speichern klicken, werden Sie auf die Sync-Seite weitergeleitet, um eine Synchronisation in beide Richtungen durchzuf\u00FChren.  Der Auto-Sync wird jeden Abend durchgef\u00FChrt.
 synchronization.help.client                          = Name des Synchronizationsclients
 synchronization.help.conflictResolution              = W\u00E4hlen Sie die Konfliktaufl\u00F6sungsstrategie aus. Konflikte passieren, wenn ein Eintrag auf Server und Client zwischen zwei Synchronizationen ge\u00E4ndert wurde.
 synchronization.help.directions                      = W\u00E4hlen Sie die Synchronizationsrichtung aus.\nBeide: beide Systeme haben gleiche Eintr\u00E4ge.\nZum Server: Die \u00C4nderungen vom Client werden an Server \u00FCbermittelt, aber nicht vom Server zum Client.\nZum Client: Die \u00C4nderungen vom Server werden an Client \u00FCbermittelt, aber nicht vom Client zum Server.
@@ -2229,6 +2232,7 @@ synchronization.syncPlan.message                     = Auf {0} werden {1} Eintr\
 synchronization.syncPlan.message.other               = {0} Eintr\u00E4ge bleiben unver\u00E4ndert.
 synchronization.syncThis                             = synchronisieren
 synchronization.synchronize                          = jetzt synchronisieren
+synchronization.syncpage                             = Synchronisationsseite
 
 system.about                             = Mit {0} lassen sich einfach und komfortabel Lesezeichen und Publikationen online verwalten und teilen. \n\nWarum nicht einfach mitmachen und interessante Webseiten und Publikationen <a href="/help_de/Literaturverweise%20und%20Lesezeichen%20hinzuf\u00C3\u00BCgen%20und%20auswerten">sammeln, verwalten</a> und <a href="/help_de/Kommentar%2C%20Rezension%2C%20Bewertung%20-%20Gemeinsam%20mit%20anderen%20diskutieren">diskutieren</a>?
 system.about.bs                          = <h2>Der einfache Weg zum Verwalten wissenschaftlicher Publikationen und Lesezeichen</h2>\n\n<p>{0} hilft Ihnen beim Verwalten Ihrer Publikationen und Lesezeichen, bei der Zusammenarbeit mit Kollegen und beim Finden neuer interessanter Sachen f\u00FCr Ihre Forschung.</p>
